# vnc2rdp

./: .gitattributes  CMakeLists.txt  README.md  Setup_Vnc2rdp.nsi  keymaps.c  keymaps.h  log.c  log.h  makeNsisDlg.nsh  rdp.c  rdp.h  sec.c  session.c  session.h  tpkt.c  vnc.c  vnc2rdp.c
getopt_mb_uni_src/: CMakeLists.txt  README.md
keyMapGen/: Class1.cs  Designation.xml  keyMapGen.csproj  keyMapGen.sln
keyMapGen/Extensions/: UsingExtension.cs  XmlDeserializeExtension.cs
keyMapGen/Models/: Designation.cs  KeyboardLayout.cs  ToVncElement.cs
keyMapGen/Tests/: Class1.cs  Kbd101.cs  Kbd109.cs
keyMapGen/Utils/: KeyMapUtil.cs  KeyMaps.cs  v2r_keymap_t.cs  v2r_rdp_t.cs
